<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.bigbeatplayer.bigbeatplayer.MusicPlayerActivity">

    <TextView
        android:id="@+id/player_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/small_padding"
        android:text="@string/player_label_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/song_and_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_label"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/song_image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_below="@id/song_and_artist_name"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/m1a"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_skip_previous_white_24px" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/play_or_stop"
                android:src="@drawable/ic_play_circle_outline_white_24px" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_skip_next_white_24px" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/player_discover_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:layout_weight="1"
                android:text="@string/discover" />

            <Button
                android:id="@+id/player_search_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:layout_weight="1"
                android:text="@string/search" />

            <Button
                android:id="@+id/player_my_music_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:layout_weight="1"
                android:text="@string/my_music" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
