<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/discover_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/small_padding"
        android:text="@string/discover_label_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/discover_music_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/discover_label"
        android:layout_marginBottom="@dimen/big_padding_discover" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/discover_my_music_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:text="@string/my_music" />

        <Button
            android:id="@+id/discover_search_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:text="@string/search" />

        <Button
            android:id="@+id/discover_now_playing_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="1"
            android:text="@string/now_playing" />
    </LinearLayout>

</RelativeLayout>